# toolbox-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
cmake/: FindGTest.cmake  Findhttplib.cmake  compiledb.cmake
include/: hexdump.hh
include/gh4ck3r/: base64.hh  concat.hh  crypto.hh  defer.hh  file.hh  hexdump.hh  lazygetter.hh  logger.hh  process.hh  recipe.hh  singleton.hh  type_traits.hh  typemap.hh
test/: CMakeLists.txt  base64.test.cc  concat.test.cc  crypto.test.cc  defer.test.cc  file.test.cc  hexdump.test.cc  http.test.cc  lazygetter.test.cc  logger.test.cc  mnl.test.cc  network.test.cc  process.test.cc  recipe.test.cc  singleton.test.cc  type_traits.test.cc  typemap.test.cc
